@@ -7,6 +7,8 @@ Date: 2020.12.12
     - Switch omnitor assemling machine´s crafting category from basic-crafting to crafting
     - Early game burner entities now accept omnified fuels aswell
     - High tier omnium-power techs that have no unlocks are now hidden
+    - Omnitors are no longer required for T1+ assemblers
+    - Radars, centrifuges, steam turbines, artillery, gun- and laser turrets now require omnitors
   Bugfixes:
     - Fixed that fuel with category = "vehicle-fuel" were not omnified
     - Fixed that the fuel_category on entities with "fuel_categories" was not properly set
